--- a/Index.html
+++ b/Index.html
@@ -73,26 +73,26 @@
       <!-- LOGO (BẠN ĐỔI MODEL + ANIMATION) -->
       <a-gltf-model
         src="#logo"
-        position="0 0 -2"
-        animation="property: rotation; to: 0 360 0; loop: true; dur: 6000">
+        position="0 0 -5"
+       >
       </a-gltf-model>
 
       <!-- NÚT THAM GIA -->
       <a-plane class="btn-join" position="0 -0.6 -1.5"
         width="1" height="0.3" color="#fff">
-        <a-text value="THAM GIA" align="center" position="0 0 0.01"></a-text>
+        <a-text value="THAM GIA" align="center" position="0 0 0.01"> node 1</a-text>
       </a-plane>
 
       <!-- NÚT TRANG SẢN PHẨM -->
       <a-plane class="btn-product" position="0 -1 -1.5"
         width="1" height="0.3" color="#ccc">
-        <a-text value="TRANG SẢN PHẨM" align="center" position="0 0 0.01"></a-text>
+        <a-text value="TRANG SẢN PHẨM" align="center" position="0 0 0.01"> node 2</a-text>
       </a-plane>
 
       <!-- NÚT BẢNG XẾP HẠNG -->
       <a-plane class="btn-leaderboard" position="0 -1.4 -1.5"
         width="1" height="0.3" color="#aaa">
-        <a-text value="BẢNG XẾP HẠNG" align="center" position="0 0 0.01"></a-text>
+        <a-text value="BẢNG XẾP HẠNG" align="center" position="0 0 0.01"> node 3</a-text>
       </a-plane>
     </a-entity>
 
