--- a/Index.html
+++ b/Index.html
@@ -110,6 +110,6 @@ body { margin:0; overflow:hidden; }
   </a-entity>
 </a-scene>
 
-<script type="module" src="ar_index.js"></script>
+<script src="ar_index.js"></script>
 </body>
 </html>
