--- a/Index.html
+++ b/Index.html
@@ -73,7 +73,7 @@
       <!-- LOGO (BẠN ĐỔI MODEL + ANIMATION) -->
       <a-gltf-model
         src="#logo"
-        position="0 0 -2" scale="-2 -2 -2"
+        position="0 0 -2" scale="0.3"
         >
       </a-gltf-model>
 
