--- a/index.html
+++ b/index.html
@@ -16,27 +16,53 @@
         <a-assets>
             <a-asset-item id="logo" src="asset/logo.glb"></a-asset-item>
             <a-asset-item id="node" src="asset/nut.glb"></a-asset-item>
+            <a-asset-item id="ans" src="asset/cautraloi.glb"></a-asset-item>
         </a-assets>
 
-        <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+        <a-camera position="0 0 0" look-controls="enabled: false">
+
+            <a-cursor raycaster="objects: .clickable"></a-cursor>
+        </a-camera>
+
 
         <a-entity mindar-image-target="targetIndex: 0">
-            <a-gltf-model src="#logo" position="0 0 0" scale="0.1 0.1 0.1" rotation="0 0 0"></a-gltf-model>
-            <!-- NODE 1 -->
-            <a-gltf-model src="#node" position="0.4 0.25 0" scale="0.2 0.2 0.2">
-            </a-gltf-model>
+            <!-- GROUP start -->
+            <a-entity id="group-main" visible="true">
+                <a-gltf-model src="#logo" position="0 0 0" scale="0.1 0.1 0.1" rotation="0 0 0"></a-gltf-model>
+                <!-- NODE 1 -->
+                <a-gltf-model src="#node" position="0.4 0.25 0" scale="0.2 0.2 0.2" class="clickable" click-switch="target: #group-quiz">
+                </a-gltf-model>
 
-            <!-- NODE 2 -->
-            <a-gltf-model src="#node" position="0.6 0 0" scale="0.2 0.2 0.2">
-            </a-gltf-model>
+                <!-- NODE 2 -->
+                <a-gltf-model src="#node" position="0.6 0 0" scale="0.2 0.2 0.2">
+                </a-gltf-model>
 
-            <!-- NODE 3 -->
-            <a-gltf-model src="#node" position="0.4 -0.25 0" scale="0.2 0.2 0.2">
-            </a-gltf-model>
+                <!-- NODE 3 -->
+                <a-gltf-model src="#node" position="0.4 -0.25 0" scale="0.2 0.2 0.2">
+                </a-gltf-model>
+            </a-entity>
+            <!-- GROUP quiz -->
+            <a-entity id="group-quiz" visible="false">
+                <a-box color="red" scale="0.3 0.3 0.3"></a-box>
+                <!-- MODEL TRÊN -->
+                <a-gltf-model src="#logo" position="0 0.35 0" scale="0.12 0.12 0.12">
+                </a-gltf-model>
+
+                <!-- HÀNG DƯỚI -->
+                <a-gltf-model src="#ans" position="-0.35 -0.2 0" scale="0.2 0.2 0.2">
+                </a-gltf-model>
+
+                <a-gltf-model src="#ans" position="0 -0.2 0" scale="0.2 0.2 0.2">
+                </a-gltf-model>
+
+                <a-gltf-model src="#ans" position="0.35 -0.2 0" scale="0.2 0.2 0.2">
+                </a-gltf-model>
+            </a-entity>
+
         </a-entity>
 
 
     </a-scene>
 </body>
-
+<script src="ap.js"></script>
 </html>
