--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
             <a-asset-item id="ans" src="asset/cautraloi.glb"></a-asset-item>
         </a-assets>
 
-        <a-camera position="0 0 0" look-controls="enabled: false">
-
-            <a-cursor raycaster="objects: .clickable"></a-cursor>
-        </a-camera>
-
+        <a-camera look-controls="enabled: false"
+          cursor="rayOrigin: mouse"
+          raycaster="objects: .clickable">
+</a-camera>
 
         <a-entity mindar-image-target="targetIndex: 0">
             <!-- GROUP start -->
