--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>AR Marker Interaction Skeleton</title>
+  <meta name="viewport"
+  content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no">
 
   <!-- A-Frame -->
   <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
@@ -29,14 +31,18 @@
 </head>
 
 <body style="margin:0; overflow:hidden;">
-  <a-asset>
+  <a-assets>
     <!-- <a-asset-item></a-asset-item> -->
     <a-asset-item id="logo" src="asset/logo.glb"></a-asset-item>
     <a-asset-item id="nut" src="asset/nut.glb"></a-asset-item>
     <a-asset-item id="ans" src="asset/cautraloi.glb"></a-asset-item>
-  </a-asset>
+  </a-assets>
 
-  <a-scene embedded arjs="sourceType: webcam;" cursor="rayOrigin: mouse" raycaster="objects: .clickable">
+  <a-scene embedded
+  style="width:100vw; height:100vh"
+  arjs="sourceType: webcam; debugUIEnabled: false;"
+  cursor="rayOrigin: mouse"
+  raycaster="objects: .clickable">
 
     <!-- ===== MARKER CỦA BẠN ===== -->
     <a-marker type="pattern" url="marker.patt" smooth="true" smoothCount="10" smoothTolerance="0.01"
@@ -45,7 +51,7 @@
       <!-- ===== SCENE 1 ===== -->
       <a-entity id="scene1" visible="true">
 
-        <a-gltf-model src="#logo" position="-1.04 0.3 0" scale="0.5 0.5 0.5" gltf-model="asset/logo.glb">
+        <a-gltf-model src="#logo" position="-1.04 0.3 0" scale="0.5 0.5 0.5" >
           <!-- class="clickable"
           scene-switch="target: #scene2"
           animation="property: scale;
@@ -57,15 +63,15 @@
 
         <!-- <a-giltf-model > </a-giltf-model> -->
         <a-gltf-model src="#node" position="0.6 0.6 0" scale="0.2 0.2 0.2" class="clickable"
-          click-switch="target: #quiz" gltf-model="asset/nut.glb" rotation="0 90 0">
+          scene-switch="target: #quiz" rotation="0 90 0">
         </a-gltf-model>
         <!-- NODE 2 -->
-        <a-gltf-model position="0.6 0.3 0" scale="0.2 0.2 0.2" gltf-model="asset/nut.glb" rotation="0 90 0"
+        <a-gltf-model src="#node" position="0.6 0.3 0" scale="0.2 0.2 0.2" rotation="0 90 0"
           animation="">
         </a-gltf-model>
 
         <!-- NODE 3 -->
-        <a-gltf-model position="0.6 0 0" scale="0.2 0.2 0.2" gltf-model="asset/nut.glb" rotation="0 90 0"
+        <a-gltf-model src="#node" position="0.6 0 0" scale="0.2 0.2 0.2" rotation="0 90 0"
           visible="">
         </a-gltf-model>
       </a-entity>
@@ -81,7 +87,7 @@
     </a-marker>
 
     <!-- CAMERA -->
-    <a-entity camera></a-entity>
+    <a-entity camera="fov: 60"></a-entity>
 
   </a-scene>
 
