--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </a-marker>
 
     <!-- CAMERA -->
-    <a-entity camera position="0 0 0"></a-entity>
+    <a-entity camera position="0 0 0" look-controls="enabled: false"></a-entity>
 
   </a-scene>
 
