--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <a-asset-item id="nut" src="asset/nut.glb"></a-asset-item>
     <a-asset-item id="ans" src="asset/cautraloi.glb"></a-asset-item>
   </a-assets>
-
-  <a-scene embedded
-  arjs="sourceType: webcam; debugUIEnabled: false;"
+<!-- embedded
+  arjs="sourceType: webcam; debugUIEnabled: false;" -->
+  <a-scene 
   cursor="rayOrigin: mouse"
   raycaster="objects: .clickable">
 
