--- a/index.html
+++ b/index.html
@@ -28,9 +28,24 @@
       }
     });
   </script>
+  <style>
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+a-scene {
+  width: 100%;
+  height: 100%;
+}
+</style>
+
 </head>
 
-<body style="margin:0; overflow:hidden;">
+<body >
   <a-assets>
     <!-- <a-asset-item></a-asset-item> -->
     <a-asset-item id="logo" src="asset/logo.glb"></a-asset-item>
