--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <title>AR Marker Interaction Skeleton</title>
-  <meta name="viewport"
-  content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no">
-
-  <!-- A-Frame -->
-  <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
-
-  <!-- AR.js -->
-  <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.js"></script>
-
-  <!-- LOGIC JS -->
-  <script>
-    // Click: Ẩn scene hiện tại → hiện scene tiếp theo
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+    <script>
+         // Click: Ẩn scene hiện tại → hiện scene tiếp theo
     AFRAME.registerComponent('scene-switch', {
       schema: {
         target: { type: 'selector' }
@@ -27,85 +19,64 @@
         });
       }
     });
-  </script>
-  <style>
-html, body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
-a-scene {
-  width: 100%;
-  height: 100%;
-}
-</style>
-
+    </script>
+    <title>Document</title>
 </head>
 
-<body >
-  <a-assets>
-    <!-- <a-asset-item></a-asset-item> -->
-    <a-asset-item id="logo" src="asset/logo.glb"></a-asset-item>
-    <a-asset-item id="nut" src="asset/nut.glb"></a-asset-item>
-    <a-asset-item id="ans" src="asset/cautraloi.glb"></a-asset-item>
-  </a-assets>
-<!--  -->
-  <a-scene
-  embedded
-  arjs="sourceType: webcam; debugUIEnabled: false;"
-  cursor="rayOrigin: mouse"
-  raycaster="objects: .clickable">
+<body>
+    <a-scene mindar-image="imageTargetSrc: targets.mind" 
+    vr-mode-ui="enabled: false"
+        device-orientation-permission-ui="enabled: false">
 
-    <!-- ===== MARKER CỦA BẠN ===== -->
-    <a-marker type="pattern" url="marker.patt" smooth="true" smoothCount="10" smoothTolerance="0.01"
-      smoothThreshold="5">
+        <a-assets>
+            <a-asset-item id="logo" src="asset/logo.glb"></a-asset-item>
+            <a-asset-item id="node" src="asset/nut.glb"></a-asset-item>
+            <a-asset-item id="ans" src="asset/cautraloi.glb"></a-asset-item>
+        </a-assets>
 
-      <!-- ===== SCENE 1 ===== -->
-      <a-entity id="scene1" visible="true">
+        <a-camera position="0 0 0" look-controls="enabled: false" cursor="rayOrigin: mouse"
+            raycaster="objects: .clickable">
+        </a-camera>
 
-        <a-gltf-model src="#logo" position="-1.04 0.3 0" scale="0.5 0.5 0.5" >
-          <!-- class="clickable"
+        <a-entity mindar-image-target="targetIndex: 0">
+            <!-- GROUP start -->
+            <a-entity id="scene1" visible="true">
+
+                <a-gltf-model src="#logo" position="-1.04 0.3 0" scale="0.5 0.5 0.5">
+                    <!-- class="clickable"
           scene-switch="target: #scene2"
           animation="property: scale;
                      from: 0 0 0;
                      to: 0.5 0.5 0.5;
                      dur: 1200;
                      easing: easeOutElastic" -->
-        </a-gltf-model>
+                </a-gltf-model>
 
-        <!-- <a-giltf-model > </a-giltf-model> -->
-        <a-gltf-model src="#nut" position="0.6 0.6 0" scale="0.2 0.2 0.2" class="clickable"
-          scene-switch="target: #quiz" rotation="0 90 0">
-        </a-gltf-model>
-        <!-- NODE 2 -->
-        <a-gltf-model src="#nut" position="0.6 0.3 0" scale="0.2 0.2 0.2" rotation="0 90 0"
-          animation="">
-        </a-gltf-model>
+                <!-- <a-giltf-model > </a-giltf-model> -->
+                <a-gltf-model src="#node" position="0.6 0.6 0" scale="0.2 0.2 0.2" class="clickable"
+                    scene-switch="target: #quiz" rotation="0 90 0">
+                </a-gltf-model>
+                <!-- NODE 2 -->
+                <a-gltf-model src="#node" position="0.6 0.3 0" scale="0.2 0.2 0.2" rotation="0 90 0" animation="">
+                </a-gltf-model>
 
-        <!-- NODE 3 -->
-        <a-gltf-model src="#nut" position="0.6 0 0" scale="0.2 0.2 0.2" rotation="0 90 0"
-          visible="">
-        </a-gltf-model>
-      </a-entity>
+                <!-- NODE 3 -->
+                <a-gltf-model src="#node" position="0.6 0 0" scale="0.2 0.2 0.2" rotation="0 90 0" visible="">
+                </a-gltf-model>
+            </a-entity>
 
-      <!-- ===== SCENE 2 ===== -->
-      <a-entity id="quiz" visible="false">
+            <!-- ===== SCENE 2 ===== -->
+            <a-entity id="quiz" visible="false">
 
-        <a-gltf-model src="#ans" position="0 0 0" scale="0.5 0.5 0.5" class="clickable">
-        </a-gltf-model>
+                <a-gltf-model src="#ans" position="0 0 0" scale="0.5 0.5 0.5" class="clickable">
+                </a-gltf-model>
 
-      </a-entity>
+            </a-entity>
 
-    </a-marker>
+        </a-entity>
 
-    <!-- CAMERA -->
-    <a-entity camera position="0 0 0" look-controls="enabled: false"></a-entity>
 
-  </a-scene>
-
+    </a-scene>
 </body>
 
 </html>
